[package]
name = "aryth"
version = "0.0.9"
description = "a iterable toolset"
authors = ["Hoyeung Wong <hoyeungw@outlook.com>"]
readme = "README.md"
edition = "2018"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = ">=0.4.0"
veho = ">=0.0.19"
texting = ">=0.0.6"
